--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>Trybewarts</title>
 </head>
 <body>
     <header class="header">
         <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+        <form class="trybewarts-login" action="" method="GET">
+            <input type="text" name="login-input" id="login-input" placeholder="Login">
+            <input type="password" name="password-input" id="password-input" placeholder="Senha">
+            <button type="button" id="submit-button">Submit</button>
+        </form>
     </header>
-    
+    <script src="script.js"></script>
 </body>
 </html>
