--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="header">
         <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+        <h1 id="trybewarts-header-title">Trybewarts</h1>
         <form class="trybewarts-login" action="" method="GET">
             <input type="text" name="login-input" id="login-input" placeholder="Login">
             <input type="password" name="password-input" id="password-input" placeholder="Senha">
