--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <button type="button" id="submit-button">Submit</button>
         </form>
     </header>
+    <main>
+        <form id="evaluation-form" action="">
+            
+        </form>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
