--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     </header>
     <main>
         <form id="evaluation-form" action="">
-            
+            <input type="text" name="input-name" id="input-name" placeholder="Nome">
+            <input type="text" name="input-lastname" id="input-lastname" placeholder="Sobrenome">
+            <input type="text" name="input-email" id="input-email" placeholder="Email">
         </form>
+        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
 </body>
