--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
     <main>
         <form id="evaluation-form" action="">
             <input type="text" name="input-name" id="input-name" placeholder="Nome">
-            <input type="text" name="input-lastname" id="input-lastname" placeholder="Sobrenome">
             <input type="text" name="input-email" id="input-email" placeholder="Email">
+            <input type="text" name="input-lastname" id="input-lastname" placeholder="Sobrenome">
         </form>
+        <select name="house" id="house">
+            <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+            <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+            <option id="corvinode-house" value="Corvinode">Corvinode</option>
+            <option id="pytherina-house" value="Pytherina">Pytherina</option>
+        </select>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
