--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Trybewarts</title>
 </head>
@@ -62,6 +64,31 @@
             <input class="subject" type="checkbox" name="subject" id="sql" value="SQL">
             <label for="python">Python</label>
             <input class="subject" type="checkbox" name="subject" id="python" value="Python">
+        </section>
+        <section class="trybewarts-rating">
+            <label id="label-rate">
+                Como você avalia a Trybewarts?
+            </label>
+            <label for="1">1</label>
+            <input type="radio" name="rate" id="1" value="1">
+            <label for="2">2</label>
+            <input type="radio" name="rate" id="2" value="2">
+            <label for="3">3</label>
+            <input type="radio" name="rate" id="3" value="3">
+            <label for="4">4</label>
+            <input type="radio" name="rate" id="4" value="4">
+            <label for="5">5</label>
+            <input type="radio" name="rate" id="5" value="5">
+            <label for="6">6</label>
+            <input type="radio" name="rate" id="6" value="6">
+            <label for="7">7</label>
+            <input type="radio" name="rate" id="7" value="7">
+            <label for="8">8</label>
+            <input type="radio" name="rate" id="8" value="8">
+            <label for="9">9</label>
+            <input type="radio" name="rate" id="9" value="9">
+            <label for="10">10</label>
+            <input type="radio" name="rate" id="10" value="10">
         </section>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
