--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
             <label for="10">10</label>
             <input type="radio" name="rate" id="10" value="10">
         </section>
+        <section>
+            <label class="textarea" for="textarea">Deixe seu comentário:"</label>
+            <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+        </section>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
