--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             <label class="textarea" for="textarea">Deixe seu comentário:"</label>
             <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
         </section>
+        <section>
+            <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
+            <input type="checkbox" name="agreement" id="agreement">
+        </section>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
