--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
             <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
             <input type="checkbox" name="agreement" id="agreement">
         </section>
+        <section>
+            <button id="submit-btn" type="submit">Enviar</button>
+        </section>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
