--- a/index.html
+++ b/index.html
@@ -92,17 +92,21 @@
         </section>
         <section>
             <label class="textarea" for="textarea">Deixe seu comentário:"</label>
-            <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+            <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500" ></textarea>
+            <div id="counter">0/500</div>
         </section>
         <section>
             <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
             <input type="checkbox" name="agreement" id="agreement">
         </section>
         <section>
-            <button id="submit-btn" type="submit">Enviar</button>
+            <button id="submit-btn" type="submit" disabled>Enviar</button>
         </section>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
+    <footer>
+        <p>"Direitos reservados à Trybewarts©"</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
