--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
         <section>
             <button id="submit-btn" type="submit">Enviar</button>
         </section>
-        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
+        <section id="image">
+            <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
