--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <input type="radio" name="rate" id="10" value="10">
             </section>
             <section class="comment-area">
-                <label class="textarea" for="textarea">Deixe seu comentário:"</label>
+                <label class="textarea" for="textarea">Deixe seu comentário:</label>
                 <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500" ></textarea>
                 <div id="counter">0/500</div>
             </section>
